Resumen y palabras claves de la carátula

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -87,10 +87,10 @@ Lautaro José Petaccio       & 443/11 & lausuper@gmail.com\\
 \vspace{1cm}
 
 \textbf{Resumen:} \\
-Pendiente.
+Se aplican distintos métodos para agregar ruido a señales sonoras e imágenes para luego, utilizando la Transformada Discreta del Coseno, plantear y sacar conclusiones sobre la eficiencia de varias técnicas de reducción del ruido agregado.
 
 \textbf{Palabras claves:}
-
+Reducción, ruido, DST, sonido, imágenes, frecuencia.
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
