--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -24,7 +24,7 @@
 \pagestyle{fancy}
 \thispagestyle{fancy}
 \lhead{Trabajo Práctico 2, Organización del Computador II}
-\rhead{Belloli, Lovisolo, Petaccio}
+\rhead{Capra, Lovisolo, Petaccio}
 \renewcommand{\footrulewidth}{0.4pt}
 \cfoot{\thepage /\pageref{LastPage}}
 
@@ -108,7 +108,12 @@ Reducción, ruido, DST, sonido, imágenes, frecuencia.
 
 
 \section{Introducción Teórica}
-Pendiente.
+\textbf{Transformada Discreta del Coseno}
+En el caso real, expresa una función $f()$ determinada utilizando una base formada
+por $\{cos(0x),cos(x),cos(2x),...,cos((n-1)x)\}$.
+
+En el caso discreto es un cambio de base, dónde la base usada se compone de cosenos discretizados a distintas frecuencias
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Desarrollo                                                                %%
