--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -149,9 +149,6 @@ Reemplaza cada elemento de la muestra por máx o mín con probabilidad p, donde 
 
 \subsubsection{Audio}
 
-\begin{center}
-\includegraphics[width=15cm]{graficos/ramp_aditivo_atenuar_muestra.png} 
-\end{center}
 
 
 ramp1234 k = 0.1
@@ -159,16 +156,28 @@ ramp1234 k = 0.1
 PSNR de la muestra con ruido agregado: 22.5536
 PSNR de la muestra luego de aplicar el método: 25.0304
 
+\begin{center}
+\includegraphics[width=15cm]{graficos/ramp_aditivo_atenuar_muestra.png} 
+\end{center}
 
 \begin{center}
 \includegraphics[width=15cm]{graficos/ramp_aditivo_atenuar_dct.png} 
 \end{center}
 
+---------------------------------
 
+dopp512 p = 0.01
 
+PSNR de la muestra con ruido agregado: 16.2445
+PSNR de la muestra luego de aplicar el método: 18.2166
 
+\begin{center}
+\includegraphics[width=15cm]{graficos/dopp_impulsivo_atenuar_muestra.png} 
+\end{center}
 
-
+\begin{center}
+\includegraphics[width=15cm]{graficos/dopp_impulsivo_atenuar_dct.png} 
+\end{center}
 
 
 
