Caption del DCT de lena aditivo

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -217,11 +217,10 @@ PSNR de la muestra luego de aplicar el método: 28.62 dB
   \caption{Ruido aditivo en imágenes.}
 \end{figure}
 
-
-
 \begin{figure}[H]
   \centering
   \includegraphics[width=15cm]{graficos/lena_aditivo_atenuar_dct.png} 
+  \caption{Muestra en base DCT.}
 \end{figure}
 
 
