Imágenes de ruido impulsivo

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -246,7 +246,34 @@ PSNR de la muestra luego de aplicar el método: 18.21 dB
 
 \subsubsection{Ruido impulsivo en imágenes}
 
-Pendiente.
+Muestra lena.pgm, probabilidad 0.01.
+
+PSNR de la muestra con ruido agregado: ?? dB
+
+PSNR de la muestra luego de aplicar el método: ?? dB
+
+
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{graficos/lena_impulsivo_muestra.png}    
+    \caption{Antes de atenuar.}
+  \end{subfigure}
+  ~ 
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{graficos/lena_impulsivo_atenuar_muestra.png}
+    \caption{Después de atenuar.}
+  \end{subfigure}
+  \caption{Ruido impulsivo en imágenes.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=15cm]{graficos/lena_impulsivo_atenuar_dct.png} 
+  \caption{Muestra en base DCT.}
+\end{figure}
 
 \subsubsection{Resultados}
 
@@ -355,7 +382,33 @@ PSNR de la muestra luego de aplicar el método: 16.96 dB
 
 \subsubsection{Ruido impulsivo en imágenes}
 
-Pendiente.
+Muestra lena.pgm, probabilidad 0.01.
+
+PSNR de la muestra con ruido agregado: 21.39 dB
+
+PSNR de la muestra luego de aplicar el método: 24.92 dB
+
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{graficos/lena_impulsivo_muestra.png}    
+    \caption{Antes de umbralizar.}
+  \end{subfigure}
+  ~ 
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{graficos/lena_impulsivo_umbralizar_muestra.png}
+    \caption{Después de umbralizar.}
+  \end{subfigure}
+  \caption{Ruido impulsivo en imágenes.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=15cm]{graficos/lena_impulsivo_umbralizar_dct.png} 
+  \caption{Muestra en base DCT.}
+\end{figure}
 
 \subsubsection{Resultados}
 
