--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -64,7 +64,7 @@ Universidad de Buenos Aires
 
 \begin{spacing}{2.5}
 \begin{Huge}
-Reducción de ruido con \\Transformada Discreta del Coseno
+Reducción de Ruido con la \\Transformada Discreta del Coseno
 \end{Huge}
 \end{spacing}
 
@@ -248,9 +248,9 @@ PSNR de la muestra luego de aplicar el método: 18.21 dB
 
 Muestra lena.pgm, probabilidad 0.01.
 
-PSNR de la muestra con ruido agregado: ?? dB
+PSNR de la muestra con ruido agregado: 21.53 dB
 
-PSNR de la muestra luego de aplicar el método: ?? dB
+PSNR de la muestra luego de aplicar el método: 24.92 dB
 
 
 \begin{figure}[H]
