--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -90,10 +90,10 @@ Lautaro José Petaccio       & 443/11 & lausuper@gmail.com\\
 \vspace{1cm}
 
 \textbf{Resumen:} \\
-Se aplican distintos métodos para agregar ruido a señales sonoras e imágenes para luego, utilizando la Transformada Discreta del Coseno, plantear y sacar conclusiones sobre la eficiencia de varias técnicas de reducción del ruido agregado.
+Se exploran dos métodos basados en la Transformada Discreta del Coseno para reducir distintos tipos de ruidos aperiódicos sobre señales de una y dos dimensiones.
 
-\textbf{Palabras claves:}
-Reducción, ruido, DST, sonido, imágenes, frecuencia.
+\textbf{Palabras clave:}
+DCT, ruido, sonido, imágenes, psnr, frecuencia.
 \newpage
 
 
@@ -227,9 +227,9 @@ PSNR de la muestra luego de aplicar el método: 28.62 dB
 
 Muestra dopp512.txt, probabilidad 0.01.
 
-PSNR de la muestra con ruido agregado: 16.24 dB
+PSNR de la muestra con ruido agregado: 15.54 dB
 
-PSNR de la muestra luego de aplicar el método: 18.21 dB
+PSNR de la muestra luego de aplicar el método: 17.55 dB
 
 \begin{figure}[H]
   \centering
