--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -93,7 +93,7 @@ Lautaro José Petaccio       & 443/11 & lausuper@gmail.com\\
 Se exploran dos métodos basados en la Transformada Discreta del Coseno para reducir distintos tipos de ruidos aperiódicos sobre señales de una y dos dimensiones.
 
 \textbf{Palabras clave:}
-DCT, ruido, sonido, imágenes, psnr, frecuencia.
+DCT, ruido, sonido, imágenes, PSNR, frecuencia.
 \newpage
 
 
@@ -120,20 +120,6 @@ La Transformada Discreta del Coseno, de ahora en más DCT, permite expresar un v
 
 En el caso de señales bidimensionales representadas con matrices $\mathbb{R}^{n \times n}$, la matriz transformada obtenida es análoga al caso unidimensional, en la que se pueden obtener los coeficientes ordenados de menor a mayor frecuencia recorriendo las coordenadas diagonalmente de derecha a izquierda y arriba a abajo, partiendo de la coordenada superior izquierda.
 
-Los tipos de ruido aplicados a las muestras son aditivo e impulsivo, descritos a continuación:
-
-\begin{description}
-
-\item[Ruido aditivo:]
-
-Suma a cada elemento de la muestra una variable aleatoria con distribución normal, con media cero y distintas varianzas de acuerdo al experimento.
-
-\item[Ruido impulsivo:]
-
-Reemplaza cada elemento de la muestra por máx o mín con probabilidad p, donde máx y mín representan el valor máximo y mínimo que adquieren los elementos de la muestra, y p variable de acuerdo al experimento.
-
-\end{description}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Desarrollo                                                                %%
@@ -141,6 +127,28 @@ Reemplaza cada elemento de la muestra por máx o mín con probabilidad p, donde 
 
 
 \section{Desarrollo}
+
+Evaluamos dos métodos para reducir los tipos de ruido descritos a continuación. Para cada método realizamos una serie de experimentos con distintos tipos de muestras, y utilizamos la ecuación de \textit{peak signal-noise ratio}, de ahora en más PSNR\footnote{La fórmula del PSNR se encuentra en el apéndice A.} para medir el nivel de información recuperado. 
+
+Los tipos de ruido tratados son los siguientes:
+
+\begin{description}
+
+\item[Ruido aditivo:]
+
+Suma a cada elemento de la muestra una variable aleatoria. En nuestros experimentos, utilizamos variables aleatorias con distribución normal, con media cero y varianza 10.
+
+Observamos que estos parámetros generan una deformación perceptible en todas nuestras muestras, pero no las distorsionan al punto de volverse irreconocibles.
+
+\item[Ruido impulsivo:]
+
+Reemplaza cada elemento de la muestra por $max$ o $min$ con probabilidad $p$, donde $max$ y $min$ representan el valor máximo y mínimo que adquieren los elementos de la muestra, y $p$ variable de acuerdo al experimento.
+
+Utilizamos $p = 0.01$ en todos nuestros experimentos. Observamos que probabilidades más altas distorsionan demasiado las muestras y dificultan el análisis.
+
+\end{description}
+
+Presentamos los dos métodos evaluados a continuación.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -150,14 +158,21 @@ Reemplaza cada elemento de la muestra por máx o mín con probabilidad p, donde 
 
 \subsection{Atenuar}
 
+Dados una constante $k$ y un índice $i$, multiplicamos por $k$ los coeficientes de la señal transformada con índice mayor o igual a $i$.
+
+Decidimos usar índices $i = n * 0.5$ e $i = n * 0.3$ para el caso de muestras unidimensionales y bidimensionales, respectivamente. Para las muestras evaluadas, estos índices maximizan el nivel de PSNR observados luego de aplicar el método. Al transformar estas muestras, observamos que el grueso de la información se encuentra en los coeficientes más bajos, y por lo tanto al atenuar los coeficientes correspondientes a frecuecias más elevadas se produce una mejora en la relación señal ruido dejando intactos los coeficientes con la mayoría de la información.
+
+Similarmente, el $k$ elegido es $0.1$. Valores más altos no logran reducir significativamente el ruido, y anular los coeficientes de índice mayor a $i$ implica una importante pérdida de información.
+
+Presentamos a continuación los resultados de distintos experimentos aplicando este método.
 
 \subsubsection{Ruido aditivo en audio}
 
-Muestra ramp1234.txt, varianza 10.
-
-PSNR de la muestra con ruido agregado: 22.55 dB
-
-PSNR de la muestra luego de aplicar el método: 25.03 dB
+\begin{description}
+  \item[Muestra:] ramp1234.txt
+  \item[PSNR inicial:] 22.55 dB
+  \item[PSNR final:] 25.03 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -172,11 +187,11 @@ PSNR de la muestra luego de aplicar el método: 25.03 dB
 \end{figure}
 
 
-Muestra dopp512.txt, varianza 10.
-
-PSNR de la muestra con ruido agregado: 14.02 dB
-
-PSNR de la muestra luego de aplicar el método: 16.28 dB
+\begin{description}
+  \item[Muestra:] dopp512.txt
+  \item[PSNR inicial:] 14.02 dB
+  \item[PSNR final:] 16.28 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -193,12 +208,11 @@ PSNR de la muestra luego de aplicar el método: 16.28 dB
 
 \subsubsection{Ruido aditivo en imágenes}
 
-Muestra lena.pgm, varianza 10.
-
-PSNR de la muestra con ruido agregado: 27.23 dB
-
-PSNR de la muestra luego de aplicar el método: 28.62 dB
-
+\begin{description}
+  \item[Muestra:] lena.pgm
+  \item[PSNR inicial:] 27.23 dB
+  \item[PSNR final:] 28.62 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -225,11 +239,11 @@ PSNR de la muestra luego de aplicar el método: 28.62 dB
 
 \subsubsection{Ruido impulsivo en audio}
 
-Muestra dopp512.txt, probabilidad 0.01.
-
-PSNR de la muestra con ruido agregado: 15.54 dB
-
-PSNR de la muestra luego de aplicar el método: 17.55 dB
+\begin{description}
+  \item[Muestra:] dopp512.txt
+  \item[PSNR inicial:] 15.54 dB
+  \item[PSNR final:] 17.55 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -246,12 +260,11 @@ PSNR de la muestra luego de aplicar el método: 17.55 dB
 
 \subsubsection{Ruido impulsivo en imágenes}
 
-Muestra lena.pgm, probabilidad 0.01.
-
-PSNR de la muestra con ruido agregado: 21.53 dB
-
-PSNR de la muestra luego de aplicar el método: 24.92 dB
-
+\begin{description}
+  \item[Muestra:] lena.pgm
+  \item[PSNR inicial:] 21.53 dB
+  \item[PSNR final:] 24.92 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -275,10 +288,6 @@ PSNR de la muestra luego de aplicar el método: 24.92 dB
   \caption{Muestra en base DCT.}
 \end{figure}
 
-\subsubsection{Resultados}
-
-Pendiente.
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Umbralizar                                                                %%
@@ -287,14 +296,17 @@ Pendiente.
 
 \subsection{Umbralizar}
 
+Dado un umbral beta y un índice i, anulamos todos los coeficientes con índice mayor o igual a i y valor absoluto menor o igual a beta.
+
+
 
 \subsubsection{Ruido aditivo en audio}
 
-Muestra ramp1234.txt, varianza 10.
-
-PSNR de la muestra con ruido agregado: 22.54 dB
-
-PSNR de la muestra luego de aplicar el método: 24.60 dB
+\begin{description}
+  \item[Muestra:] ramp1234.txt
+  \item[PSNR inicial:] 22.54 dB
+  \item[PSNR final:] 24.60 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -309,11 +321,11 @@ PSNR de la muestra luego de aplicar el método: 24.60 dB
 \end{figure}
 
 
-Muestra dopp512.txt, varianza 10.
-
-PSNR de la muestra con ruido agregado: 14.31 dB
-
-PSNR de la muestra luego de aplicar el método: 16.45 dB
+\begin{description}
+  \item[Muestra:] dopp512.txt
+  \item[PSNR inicial:] 14.31 dB
+  \item[PSNR final:] 16.45 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -330,11 +342,11 @@ PSNR de la muestra luego de aplicar el método: 16.45 dB
 
 \subsubsection{Ruido aditivo en imágenes}
 
-Muestra lena.pgm, varianza 10.
-
-PSNR de la muestra con ruido agregado: 27.27 dB
-
-PSNR de la muestra luego de aplicar el método: 28.08 dB
+\begin{description}
+  \item[Muestra:] lena.pgm
+  \item[PSNR inicial:] 27.27 dB
+  \item[PSNR final:] 28.08 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -361,11 +373,11 @@ PSNR de la muestra luego de aplicar el método: 28.08 dB
 
 \subsubsection{Ruido impulsivo en audio}
 
-Muestra dopp512.txt, probabilidad 0.01.
-
-PSNR de la muestra con ruido agregado: 14.87 dB
-
-PSNR de la muestra luego de aplicar el método: 16.96 dB
+\begin{description}
+  \item[Muestra:] dopp512.txt
+  \item[PSNR inicial:] 14.87 dB
+  \item[PSNR final:] 16.96 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -382,11 +394,11 @@ PSNR de la muestra luego de aplicar el método: 16.96 dB
 
 \subsubsection{Ruido impulsivo en imágenes}
 
-Muestra lena.pgm, probabilidad 0.01.
-
-PSNR de la muestra con ruido agregado: 21.39 dB
-
-PSNR de la muestra luego de aplicar el método: 24.92 dB
+\begin{description}
+  \item[Muestra:] lena.pgm
+  \item[PSNR inicial:] 21.39 dB
+  \item[PSNR final:] 24.92 dB
+\end{description}
 
 \begin{figure}[H]
   \centering
@@ -409,10 +421,6 @@ PSNR de la muestra luego de aplicar el método: 24.92 dB
   \includegraphics[width=15cm]{graficos/lena_impulsivo_umbralizar_dct.png} 
   \caption{Muestra en base DCT.}
 \end{figure}
-
-\subsubsection{Resultados}
-
-Pendiente.
 
 % \subsection{Generación de ruidos}
 % Implementamos el ruido aditivo e impulsivo tanto para imágenes como para sonido.
